FlightPath 6.x Changelog
========================

2022-03-12
  Added new feature to function get_term_structures, where "term_suffix" is now one of the values returned, instead of just being
  in the key of the array.
  
  Altered functions in stats so that we can override the default breadcrumbs on the form where we select the school. 

  Made sure course_search also excluded courses with delete_flag set.


2022-03-11
  Modified course_search_dislay_search to use render array system, so other modules can make modifications.
  
  Added weights to course_search edit form, making it easier for other modules to make modifications.
  
  

2022-03-09
  Added abiility to filter by degree level (UG or GR) on the admin console -> degree list screen.
  
  Changed comments and removed old code from hook.api.php.
  

2022-03-08
  Fixed a bug when sending the "Contact the FlightPath Production Team" email, where the last selected student CWID was not appearing.
  
  Removed the outdated "addslashes" to the msg of the email from the Contact link.  Also added a "close window" button on the "Thank You" page.
  
  Advising history changed slightly to have a "minimal" text option, specifically for the "email events" module.
  

2022-03-07
  Made it to where emails for mysql and PHP errors first convert times into system (or user) timezone, as well as display which user
  triggered the error.
  
  Added watchdog debug statement any time we send an email via fp_mail() function.  Added logic to prevent infinite loops if mysql server is down.
  

2022-03-04
  Fixed typo in code which was causing advisor name not to show on the advising history tab.
  

2022-02-25
  Added code so that the system can have a default tab to load for students, if not overridden by the individual user's settings.
  

2022-02-21
  Modified .htaccess for compatibility with Order directive throwing a 500 error in some implementations of Apache 2.4.  Thanks, Apache!  
  